[workspace]
resolver = "2"
members = [
    "crates/miyabi-core",
    "crates/miyabi-agents",
    "crates/miyabi-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Miyabi Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
