[package]
name = "miyabi-agents"
version.workspace = true
edition = "2021"

[dependencies]
miyabi-core = { path = "../miyabi-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
