[package]
name = "miyabi-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "miyabi"
path = "src/main.rs"

[dependencies]
miyabi-core = { path = "../miyabi-core" }
miyabi-agents = { path = "../miyabi-agents" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
